# tap-decentraland-api

./: .gitignore  Dockerfile  README.md  docker-pipeline.sh  docker-run.sh  meltano.yml  pyproject.toml  tap-decentraland-api.sh  target-jsonl.sh  tox.ini
aragon_metadata/: README.md
config/: production.json  staging.json
tap_decentraland_api/: api_streams.py  aragon_dao_streams.py  badges_streams.py  builder_streams.py  client.py  coingecko_mana_stream.py  comms_streams.py  decode_evm_script.py  events_streams.py  places_streams.py  profiles_streams.py  scenes_streams.py  smart_items_streams.py  snapshot_dao_streams.py  stores_stream.py  streams.py  tap.py  worlds_stream.py
tap_decentraland_api/aragon_metadata/: apps.json
tap_decentraland_api/tests/: __init__.py  test_core.py
