[tool.poetry]
name = "tap-decentraland-api"
version = "0.1.0"
description = "`tap-decentraland-api` is Singer tap for DecentralandAPI, built with the Singer SDK."
authors = ["Pablo Seibelt"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.8"
requests = "^2.25.1"
singer-sdk = "^0.16.0"
eth_utils = "^1.10.0"
pycryptodome = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-decentraland-api = 'tap_decentraland_api.tap:cli'
